# ms-validate-user

./: .mega-linter.yml  Dockerfile  README.md  index.yaml  main.py  openapi.json  pyproject.toml  requirements.in  requirements.txt  trivy-results.sarif
.github/workflows/: build-push-chart.yml  codeql.yml  mega-linter.yml  scorecard.yml
chart/ms-validate-user/: Chart.yaml  README.md  values.yaml
chart/ms-validate-user/templates/: deployment.yaml  secret.yaml
cloudbuild/: cloudbuild.yaml
