[tool.poetry]
name = "ms-validate-user"
version = "0.1.0"
description = "FastAPI service for user validation and account recovery"
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.119.0"
psycopg2-binary = "2.9.11"
sqlalchemy = "2.0.44"
uvicorn = "0.37.0"
requests = "2.32.5"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
cryptography = "46.0.2"
certifi = "2025.10.5"
idna = "3.11"
pydantic = { version = "^2.11.7", extras = ["email"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
