[tool.poetry]
name = "ms-validate-user"
version = "0.1.0"
description = "FastAPI service for user validation and account recovery"
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "^2025.11.12"
cryptography = "^46.0.3"
fastapi = "^0.127.0"
idna = "^3.11"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
pyjwt = "^2.10.1"
requests = "^2.32.5"
sqlalchemy = "^2.0.45"
uvicorn = "^0.40.0"
email-validator = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
